--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "convex": "^1.12.2",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
+    "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
