--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
+    "svix": "^1.34.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
