--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -24,10 +25,12 @@
     "clsx": "^2.1.1",
     "convex": "^1.12.2",
     "lucide-react": "^0.439.0",
-    "next": "14.2.9",
+    "next": "^14.2.12",
     "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.1",
+    "react-select-country-list": "^2.2.3",
     "react-transition-group": "^4.4.5",
     "svix": "^1.34.0",
     "tailwind-merge": "^2.5.2",
